# HackathonIA

./: .env.example  .gitignore  Dockerfile  README  README.md  docker-compose.yml  requirements.txt
.claude/: settings.local.json
ModelsAI/: .env.example  Dockerfile  docker-compose.yml  model_metadata.json  payload_example.json  pyproject.toml  xgb_fraude.json
ModelsAI/data/processed/: data_dictionary.json  rules_scored_claims.csv
ModelsAI/data/synthetic/: claims_sinteticos.csv
ModelsAI/docs/: modelo_datos.md
ModelsAI/sql/: 00_create_schema.sql  06_build_features.sql  07_apply_rule_flags.sql  08_build_rules_scored_claims.sql  09_validation_queries.sql  10_export_queries.sql
ModelsAI/src/: __init__.py  main.py
ModelsAI/src/adapters/: fraud.py
ModelsAI/src/api/: main.py
ModelsAI/src/export/: __init__.py  export_rules_scored_claims.py
ModelsAI/src/features/: build_features.py
ModelsAI/src/ingestion/: __init__.py  detect_format.py  read_upload.py
ModelsAI/src/mapping/: __init__.py
ModelsAI/src/models/: fraud.py
ModelsAI/src/normalization/: __init__.py  normalize_claims.py  normalize_documents.py  normalize_policies.py  normalize_vehicles.py
ModelsAI/src/persistence/: repository.py  upsert_service.py
ModelsAI/src/pipeline/: __init__.py  build_persona1_dataset.py  migration_pipeline.py
ModelsAI/src/realtime/: listener.py  process_features.py  process_ml.py  process_rules.py  process_score.py  processor.py
ModelsAI/src/rules/: __init__.py  catalog_rules.py  fraud_rules.py
ModelsAI/src/services/: fraud_predictor.py
db/: 00_safe_schema.sql  (+1 more)
(+110 files in other folders)
