[tool.poetry]
name = "hackathon-ia"
version = "0.1.0"
description = "fraudia-claims — Persona 1: Detección de Fraude en Siniestros + API"
authors = ["PabloA-Figueroa <apfigueroa3@utpl.edu.ec>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
anthropic = ">=0.40.0"
pandas = ">=2.0.0"
openpyxl = ">=3.1.0"
chardet = ">=5.0.0"
python-dotenv = ">=1.0.0"
numpy = ">=1.24.0"
fastapi = ">=0.115.0"
uvicorn = {extras = ["standard"], version = ">=0.34.0"}

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
httpx = ">=0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
